# vision-tracker

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  travis.sh
visiontracker/: CMakeLists.txt
visiontracker/include/visiontracker/: calibration.h  logger.h  tracker.h
visiontracker/src/: CMakeLists.txt  calibration.cpp  logger.cpp  tracker.cpp
visiontracker/test/: CMakeLists.txt  runtests.sh  test_calibration.cpp  test_tracker.cpp
